// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render VideoPlayer Render VideoPlayer muted 1`] = `
<video
  className="player__video"
  muted={true}
  poster="poster.jpg"
  src="src.avi"
/>
`;

exports[`Render VideoPlayer Render VideoPlayer not muted 1`] = `
<video
  className="player__video"
  muted={false}
  poster="poster.jpg"
  src="src.avi"
/>
`;
